Clean up MLGRush module: fix typos, formatting, and add Javadoc
Co-authored-by: Ya55in0 <62219093+Ya55in0@users.noreply.github.com>